testdata/not_valid/raw_string_keeps_line_count.out
raw_string_keeps_line_count.kevs:8: error: parse: key 'x' is not unique for current table
